Fixed style for logo to correctly display on mobile devices. It should be auto-sized. Extended logo div to be col-sm-9.

--- a/catalog/view/theme/opencartSamopekTheme/stylesheet/stylesheet.css
+++ b/catalog/view/theme/opencartSamopekTheme/stylesheet/stylesheet.css
@@ -46,7 +46,7 @@ div.required .control-label:before { content: '* '; color: #F00; font-weight: bo
 #top-links a + a { margin-left: 15px; }
 
 /* logo */
-#logo {margin: 15px 0 15px 0; width: 2000px}
+#logo {margin: 15px 0 15px 0}
 
 /* search */
 #search { margin-bottom:15px; margin-top:100px;}
